Correct the right alignment of the log viewer go to end button by adjusting it to match middle container edge. Fixes https://github.com/openshift/origin-web-console/issues/1162

--- a/app/styles/_variables.less
+++ b/app/styles/_variables.less
@@ -42,9 +42,13 @@
 @link-hover-color-bright: lighten(@link-color, 13%);
 @list-view-expanded-bg: #f5f5f5;
 @log-bg-color: #101214;
+@log-scroll-top-offset: (@scrollbar-width + @middle-content-container-padding);
+@log-scroll-top-offset-lg: (@scrollbar-width + @middle-content-container-padding-lg);
 // The log viewer needs to be udpated if this value changes.  It accounts for
 // bottom margin when resizing the log in JavaScript.
 @middle-content-bottom-margin: @grid-gutter-width;
+@middle-content-container-padding: floor((@grid-gutter-width / 2)); // 20px bootstrap default
+@middle-content-container-padding-lg: (@middle-content-container-padding + 10px);
 @navbar-header-offset: 2px;
 @navbar-os-header-height-desktop: 60px;
 @navbar-os-header-height-mobile: 46px;
@@ -104,7 +108,7 @@
 @scrollbar-track: rgba(0,0,0,.03);
 @scrollbar-track-inverse: @sidebar-os-border-color;
 @scrollbar-track-inverse-alt: rgba(255,255,255,.1);
-@scrollbar-width: 14px;
+@scrollbar-width: 15px;
 @scrollbar-width-log-viewer: 17px;
 @status-bg-color: #E6ECF1;
 @status-border-color: #BFCEDB;
